--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<title>Image Gallery</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css "href="css/main.css">
 </head>
 <body>
-	<p></p>
+	<p>Text</p>
 </body>
 </html>
